* Updated the cron schedule to 0 0 * * * (runs at midnight UTC daily). * Fixed working-directory: It was incorrectly set to repo-mirror, now correctly set to crossfire-arch. * Added --mirror flag in git push to ensure it properly mirrors all refs

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -3,7 +3,7 @@ name: Mirror SourceForge Repository
 # This schedule runs the workflow every hour; adjust the cron expression as needed.
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:  # Optional: allows manual triggering
 
 jobs:
@@ -14,10 +14,11 @@ jobs:
       - name: Clone SourceForge repo
         run: |
           git clone git://git.code.sf.net/p/crossfire/crossfire-arch crossfire-arch
+
       # Step 2: Push the mirror to GitHub
       - name: Push mirror to GitHub
-        working-directory: repo-mirror
+        working-directory: crossfire-arch 
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          git push https://github.com/basictheprogram/crossfire-arch.git
+          git push --mirror https://github.com/basictheprogram/crossfire-arch.git
