--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -21,5 +21,5 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          git push --mirror https://x-access-token:${GH_TOKEN}@github.com/basictheprogram/crossfire-arch.git
+          git push --force --tags https://x-access-token:${GH_TOKEN}@github.com/basictheprogram/crossfire-arch.git
 
